--- a/src/BlazorContacts.Client/wwwroot/index.html
+++ b/src/BlazorContacts.Client/wwwroot/index.html
@@ -15,7 +15,8 @@
 <body>
     <app>Loading...</app>
 
-    <script type="blazor-boot"></script>
-    <script src="blazorInterop.js"></script>
+    <script src="/blazorInterop.js"></script>
+    <script src="_framework/blazor.webassembly.js"></script>
+    </script>
 </body>
 </html>
